// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render empty Url 1`] = `
<div>
  No data available for
  https://some.url
</div>
`;

exports[`Should render full Url 1`] = `
Array [
  <div
    className="fr-callout fr-mb-3w"
  >
    <h4
      className="fr-callout__title fr-text--lg"
    >
      <a
        href="https://www.fabrique.social.gouv.fr"
        rel="noreferrer noopener"
        target="_blank"
      >
        https://www.fabrique.social.gouv.fr
      </a>
    </h4>
    <p
      className="fr-callout__text fr-text--lg"
    >
      <button
        className="badge success"
        onClick={[Function]}
        type="button"
      >
        fabrique
      </button>
      <button
        className="badge info"
        onClick={[Function]}
        type="button"
      >
        social
      </button>
      <button
        className="badge info"
        onClick={[Function]}
        type="button"
      >
        sante
      </button>
      <button
        className="badge info"
        onClick={[Function]}
        type="button"
      >
        travail
      </button>
      <svg
        className="clockIcon"
        fill="none"
        height={16}
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <polyline
          points="12 6 12 12 16 14"
        />
      </svg>
      <span
        className="clock"
        title="2022-05-22T03:00:18.861Z"
      >
        Mise à jour il y a :
         
        environ 1 an
      </span>
    </p>
    <img
      alt="Copie d'écran de https://www.fabrique.social.gouv.fr"
      className="screenshotImg"
      src="/report/aHR0cHM6Ly93d3cuZmFicmlxdWUuc29jaWFsLmdvdXYuZnI=/screenshot.jpeg"
    />
  </div>,
  <div
    className="fr-tabs"
  >
    <ul
      className="fr-tabs__list"
      role="tablist"
    >
      <li
        role="presentation"
      >
        <button
          aria-controls="fr-tabpanel-0"
          aria-selected={true}
          className="fr-tabs__tab"
          id="fr-tab-0"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
          role="tab"
          tabIndex={0}
          type="button"
        >
          <svg
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "marginBottom": -2,
                "marginRight": 5,
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14 9V5a3 3 0 0 0-3-3l-4 9v11h11.28a2 2 0 0 0 2-1.7l1.38-9a2 2 0 0 0-2-2.3zM7 22H4a2 2 0 0 1-2-2v-7a2 2 0 0 1 2-2h3"
            />
          </svg>
          Bonnes pratiques
        </button>
      </li>
      <li
        role="presentation"
      >
        <button
          aria-controls="fr-tabpanel-1"
          aria-selected={false}
          className="fr-tabs__tab"
          id="fr-tab-1"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
          role="tab"
          tabIndex={0}
          type="button"
        >
          <svg
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "marginBottom": -2,
                "marginRight": 5,
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <polygon
              points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"
            />
          </svg>
          Disponibilité
        </button>
      </li>
      <li
        role="presentation"
      >
        <button
          aria-controls="fr-tabpanel-2"
          aria-selected={false}
          className="fr-tabs__tab"
          id="fr-tab-2"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
          role="tab"
          tabIndex={0}
          type="button"
        >
          <svg
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "marginBottom": -2,
                "marginRight": 5,
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="11"
              rx="2"
              ry="2"
              width="18"
              x="3"
              y="11"
            />
            <path
              d="M7 11V7a5 5 0 0 1 10 0v4"
            />
          </svg>
          Sécurité
        </button>
      </li>
      <li
        role="presentation"
      >
        <button
          aria-controls="fr-tabpanel-3"
          aria-selected={false}
          className="fr-tabs__tab"
          id="fr-tab-3"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
          role="tab"
          tabIndex={0}
          type="button"
        >
          <svg
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "marginBottom": -2,
                "marginRight": 5,
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="12"
              x2="12"
              y1="16"
              y2="12"
            />
            <line
              x1="12"
              x2="12.01"
              y1="8"
              y2="8"
            />
          </svg>
          Informations
        </button>
      </li>
    </ul>
    <div
      aria-labelledby="fr-tab-0"
      className="fr-tabs__panel fr-tabs__panel--selected"
      id="fr-tabpanel-0"
      role="tabpanel"
      style={
        Object {
          "paddingTop": 30,
        }
      }
      tabIndex={0}
    >
      <div>
        <div
          id="lighthouse"
        />
        <div
          className="container"
        >
          <div
            className="banner"
          >
            <h5
              className="mainTitle"
            >
              LightHouse
            </h5>
            <svg
              fill="none"
              height={20}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "cursor": "pointer",
                  "marginLeft": 5,
                }
              }
              viewBox="0 0 24 24"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <line
                x1="12"
                x2="12"
                y1="16"
                y2="12"
              />
              <line
                x1="12"
                x2="12.01"
                y1="8"
                y2="8"
              />
            </svg>
          </div>
          <div
            className="body"
          >
            <div
              className="fr-grid-row"
            >
              <div
                className="fr-col"
              >
                <div
                  className="accesibility"
                >
                  Moins de 25% des critères d'accessibilité peuvent être testés automatiquement, 
                  <strong>
                    une expertise manuelle est requise
                  </strong>
                  .
                  <br />
                  <br />
                  Ce score ne représente pas le score RGAA mais une partie des bonnes pratiques de base à appliquer.
                </div>
              </div>
            </div>
            <div
              className="container"
            >
              <div
                className="banner"
              >
                <h5
                  className="mainTitle"
                >
                  https://www.fabrique.social.gouv.fr/
                </h5>
                <svg
                  fill="none"
                  height={20}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  stroke="currentColor"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                  style={
                    Object {
                      "cursor": "pointer",
                      "marginLeft": 5,
                    }
                  }
                  viewBox="0 0 24 24"
                  width={20}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <line
                    x1="12"
                    x2="12"
                    y1="16"
                    y2="12"
                  />
                  <line
                    x1="12"
                    x2="12.01"
                    y1="8"
                    y2="8"
                  />
                </svg>
                <a
                  href="/report/aHR0cHM6Ly93d3cuZmFicmlxdWUuc29jaWFsLmdvdXYuZnI=/lhr-aHR0cHM6Ly93d3cuZmFicmlxdWUuc29jaWFsLmdvdXYuZnIv.html"
                  rel="noreferrer noopener"
                  style={
                    Object {
                      "float": "right",
                    }
                  }
                  target="_blank"
                >
                  Rapport LightHouse
                </a>
              </div>
              <div
                className="body"
              >
                <div
                  className="fr-grid-row"
                >
                  <div
                    className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
                  >
                    <div
                      className="card"
                    >
                      <div>
                        gauge mock
                      </div>
                      <div
                        className="cardTitle"
                      >
                        Accessibility
                      </div>
                      <div
                        className="cardValue"
                      >
                        96%
                      </div>
                    </div>
                  </div>
                  <div
                    className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
                  >
                    <div
                      className="card"
                    >
                      <div>
                        gauge mock
                      </div>
                      <div
                        className="cardTitle"
                      >
                        Performance
                      </div>
                      <div
                        className="cardValue"
                      >
                        30%
                      </div>
                    </div>
                  </div>
                  <div
                    className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
                  >
                    <div
                      className="card"
                    >
                      <div>
                        gauge mock
                      </div>
                      <div
                        className="cardTitle"
                      >
                        SEO
                      </div>
                      <div
                        className="cardValue"
                      >
                        90%
                      </div>
                    </div>
                  </div>
                  <div
                    className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
                  >
                    <div
                      className="card"
                    >
                      <div>
                        gauge mock
                      </div>
                      <div
                        className="cardTitle"
                      >
                        Best Practices
                      </div>
                      <div
                        className="cardValue"
                      >
                        93%
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="fr-grid-row"
                >
                  <div
                    className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
                  >
                    <div
                      className="card"
                    >
                      <div
                        className="cardTitle"
                      >
                        First contentful Paint
                      </div>
                      <div
                        className="cardValue"
                      >
                        1.2s
                      </div>
                    </div>
                  </div>
                  <div
                    className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
                  >
                    <div
                      className="card"
                    >
                      <div
                        className="cardTitle"
                      >
                        Time to interactive
                      </div>
                      <div
                        className="cardValue"
                      >
                        4.5s
                      </div>
                    </div>
                  </div>
                  <div
                    className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
                  >
                    <div
                      className="card"
                    >
                      <div
                        className="cardTitle"
                      >
                        Total requests
                      </div>
                      <div
                        className="cardValue"
                      >
                        54
                      </div>
                    </div>
                  </div>
                  <div
                    className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
                  >
                    <div
                      className="card"
                    >
                      <div
                        className="cardTitle"
                      >
                        Total weight
                      </div>
                      <div
                        className="cardValue"
                      >
                        7.10Mb
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          id="thirdparties"
        />
        <div
          className="container"
        >
          <div
            className="banner"
          >
            <h5
              className="mainTitle"
            >
              Scripts tiers et cookies
            </h5>
            <svg
              fill="none"
              height={20}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "cursor": "pointer",
                  "marginLeft": 5,
                }
              }
              viewBox="0 0 24 24"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <line
                x1="12"
                x2="12"
                y1="16"
                y2="12"
              />
              <line
                x1="12"
                x2="12.01"
                y1="8"
                y2="8"
              />
            </svg>
          </div>
          <div
            className="body"
          >
            <div
              className="fr-table"
            >
              <table>
                <caption />
                <thead>
                  <tr>
                    <th
                      className=""
                      onClick={[Function]}
                      scope="col"
                    >
                      <div
                        className="table-column-header"
                      >
                        Cookies
                      </div>
                    </th>
                    <th
                      className=""
                      onClick={[Function]}
                      scope="col"
                    >
                      <div
                        className="table-column-header"
                      >
                        Domaine
                      </div>
                    </th>
                    <th
                      className=""
                      onClick={[Function]}
                      scope="col"
                    >
                      <div
                        className="table-column-header"
                      >
                        HTTP Only
                      </div>
                    </th>
                    <th
                      className=""
                      onClick={[Function]}
                      scope="col"
                    >
                      <div
                        className="table-column-header"
                      >
                        Secure
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td>
                      _pk_ses.2.6321
                    </td>
                    <td>
                      www.fabrique.social.gouv.fr
                    </td>
                    <td>
                      ❌
                    </td>
                    <td>
                      ❌
                    </td>
                  </tr>
                  <tr>
                    <td>
                      _pk_id.2.6321
                    </td>
                    <td>
                      www.fabrique.social.gouv.fr
                    </td>
                    <td>
                      ❌
                    </td>
                    <td>
                      ❌
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
            <div
              className="fr-table"
            >
              <table>
                <caption />
                <thead>
                  <tr>
                    <th
                      className=""
                      onClick={[Function]}
                      scope="col"
                    >
                      <div
                        className="table-column-header"
                      >
                        Flag
                      </div>
                    </th>
                    <th
                      className=""
                      onClick={[Function]}
                      scope="col"
                    >
                      <div
                        className="table-column-header"
                      >
                        Hostname
                      </div>
                    </th>
                    <th
                      className=""
                      onClick={[Function]}
                      scope="col"
                    >
                      <div
                        className="table-column-header"
                      >
                        IP
                      </div>
                    </th>
                    <th
                      className=""
                      onClick={[Function]}
                      scope="col"
                    >
                      <div
                        className="table-column-header"
                      >
                        City
                      </div>
                    </th>
                    <th
                      className=""
                      onClick={[Function]}
                      scope="col"
                    >
                      <div
                        className="table-column-header"
                      >
                        Country
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td />
                    <td>
                      www.fabrique.social.gouv.fr
                    </td>
                    <td>
                      20.74.14.77
                    </td>
                    <td>
                      Paris
                    </td>
                    <td>
                      France
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          id="stats"
        />
        <div
          className="container"
        >
          <div
            className="banner"
          >
            <h5
              className="mainTitle"
            >
              Page de statistiques
            </h5>
            <svg
              fill="none"
              height={20}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "cursor": "pointer",
                  "marginLeft": 5,
                }
              }
              viewBox="0 0 24 24"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <line
                x1="12"
                x2="12"
                y1="16"
                y2="12"
              />
              <line
                x1="12"
                x2="12.01"
                y1="8"
                y2="8"
              />
            </svg>
          </div>
          <div
            className="body"
          >
            <div
              className="fr-alert fr-alert--error"
            >
              <p
                className="fr-alert__title"
              >
                
              </p>
              <p>
                La page n'a pas été détectée! Ajoutez-la sur https://www.fabrique.social.gouv.fr/stats
              </p>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          id="declaration-a11y"
        />
        <div
          className="container"
        >
          <div
            className="banner"
          >
            <h5
              className="mainTitle"
            >
              Déclaration de mise en accessibilité
            </h5>
            <svg
              fill="none"
              height={20}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "cursor": "pointer",
                  "marginLeft": 5,
                }
              }
              viewBox="0 0 24 24"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <line
                x1="12"
                x2="12"
                y1="16"
                y2="12"
              />
              <line
                x1="12"
                x2="12.01"
                y1="8"
                y2="8"
              />
            </svg>
          </div>
          <div
            className="body"
          >
            <div
              className="fr-alert fr-alert--info"
            >
              <p
                className="fr-alert__title"
              >
                non-conforme
              </p>
              <p>
                La mention a bien été detectée : Non conforme
              </p>
            </div>
            <div
              className="fr-alert fr-alert--success"
            >
              <p
                className="fr-alert__title"
              >
                
              </p>
              <p>
                La déclaration est disponible sur :
                 
                <a
                  href="https://www.fabrique.social.gouv.fr/declaration-accessibilite"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  https://www.fabrique.social.gouv.fr/declaration-accessibilite
                </a>
              </p>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          id="declaration-rgpd"
        />
        <div
          className="container"
        >
          <div
            className="banner"
          >
            <h5
              className="mainTitle"
            >
              Mentions légales
            </h5>
            <svg
              fill="none"
              height={20}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "cursor": "pointer",
                  "marginLeft": 5,
                }
              }
              viewBox="0 0 24 24"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <line
                x1="12"
                x2="12"
                y1="16"
                y2="12"
              />
              <line
                x1="12"
                x2="12.01"
                y1="8"
                y2="8"
              />
            </svg>
          </div>
          <div
            className="body"
          >
            <div
              className="fr-alert fr-alert--success"
            >
              <p
                className="fr-alert__title"
              >
                declaration-ok
              </p>
              <p>
                Votre déclaration a bien été détectée sur :
                 
                <a
                  href="https://www.fabrique.social.gouv.fr/mentions-legales/"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  https://www.fabrique.social.gouv.fr/mentions-legales/
                </a>
              </p>
            </div>
          </div>
        </div>
        <div
          className="container"
        >
          <div
            className="banner"
          >
            <h5
              className="mainTitle"
            >
              Politique de confidentialité
            </h5>
            <svg
              fill="none"
              height={20}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "cursor": "pointer",
                  "marginLeft": 5,
                }
              }
              viewBox="0 0 24 24"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <line
                x1="12"
                x2="12"
                y1="16"
                y2="12"
              />
              <line
                x1="12"
                x2="12.01"
                y1="8"
                y2="8"
              />
            </svg>
          </div>
          <div
            className="body"
          >
            <div
              className="fr-alert fr-alert--error"
            >
              <p
                className="fr-alert__title"
              >
                no-declaration
              </p>
              <p>
                Pas de déclaration détectée. 
              </p>
            </div>
            <div
              className="fr-alert fr-alert--error"
            >
              <p
                className="fr-alert__title"
              >
                incomplete-declaration
              </p>
              <p>
                Rendez vous sur
                 
                <a
                  href="https://mattermost.incubateur.net/betagouv/channels/domaine-juridique"
                >
                  https://mattermost.incubateur.net/betagouv/channels/domaine-juridique
                </a>
                 
              </p>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          id="404"
        />
        <div
          className="container"
        >
          <div
            className="banner"
          >
            <h5
              className="mainTitle"
            >
              Erreurs 404
            </h5>
            <svg
              fill="none"
              height={20}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "cursor": "pointer",
                  "marginLeft": 5,
                }
              }
              viewBox="0 0 24 24"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <line
                x1="12"
                x2="12"
                y1="16"
                y2="12"
              />
              <line
                x1="12"
                x2="12.01"
                y1="8"
                y2="8"
              />
            </svg>
          </div>
          <div
            className="body"
          >
            <div
              className="fr-table"
            >
              <table>
                <caption />
                <thead>
                  <tr>
                    <th
                      className=""
                      onClick={[Function]}
                      scope="col"
                    >
                      <div
                        className="table-column-header"
                      >
                        URL
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td>
                      https://www.fabrique.social.gouv.fr/startups/code-du-travail-numerique/kickoff/genese
                    </td>
                  </tr>
                  <tr>
                    <td>
                      https://www.fabrique.social.gouv.fr/faq/beta.gouv.fr
                    </td>
                  </tr>
                  <tr>
                    <td>
                      https://www.fabrique.social.gouv.fr/startups/enfants-du-spectacle/
                    </td>
                  </tr>
                  <tr>
                    <td>
                      https://www.fabrique.social.gouv.fr/startups/Domifa/
                    </td>
                  </tr>
                  <tr>
                    <td>
                      https://www.fabrique.social.gouv.fr/startups/transition-collective/
                    </td>
                  </tr>
                  <tr>
                    <td>
                      https://www.fabrique.social.gouv.fr/feed.xml
                    </td>
                  </tr>
                  <tr>
                    <td>
                      https://www.fabrique.social.gouv.fr/startups/code-du-travail-numerique/sdr
                    </td>
                  </tr>
                  <tr>
                    <td>
                      https://www.fabrique.social.gouv.fr/startups/ramses/
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-labelledby="fr-tab-1"
      className="fr-tabs__panel "
      id="fr-tabpanel-1"
      role="tabpanel"
      style={
        Object {
          "paddingTop": 30,
        }
      }
      tabIndex={0}
    >
      <div
        className="fr-alert fr-alert--error"
      >
        <p
          className="fr-alert__title"
        >
          warn-no-info
        </p>
        <p>
          Aucune information trouvée dans cette catégorie
        </p>
      </div>
    </div>
    <div
      aria-labelledby="fr-tab-2"
      className="fr-tabs__panel "
      id="fr-tabpanel-2"
      role="tabpanel"
      style={
        Object {
          "paddingTop": 30,
        }
      }
      tabIndex={0}
    >
      <div
        className="fr-alert fr-alert--error"
      >
        <p
          className="fr-alert__title"
        >
          warn-no-info
        </p>
        <p>
          Aucune information trouvée dans cette catégorie
        </p>
      </div>
    </div>
    <div
      aria-labelledby="fr-tab-3"
      className="fr-tabs__panel "
      id="fr-tabpanel-3"
      role="tabpanel"
      style={
        Object {
          "paddingTop": 30,
        }
      }
      tabIndex={0}
    >
      <div
        className="fr-alert fr-alert--error"
      >
        <p
          className="fr-alert__title"
        >
          warn-no-info
        </p>
        <p>
          Aucune information trouvée dans cette catégorie
        </p>
      </div>
    </div>
  </div>,
]
`;

exports[`Should render full Url with screenshot 1`] = `
Array [
  <div
    className="fr-callout fr-mb-3w"
  >
    <h4
      className="fr-callout__title fr-text--lg"
    >
      <a
        href="https://www.fabrique.social.gouv.fr"
        rel="noreferrer noopener"
        target="_blank"
      >
        https://www.fabrique.social.gouv.fr
      </a>
    </h4>
    <p
      className="fr-callout__text fr-text--lg"
    >
      <button
        className="badge success"
        onClick={[Function]}
        type="button"
      >
        fabrique
      </button>
      <button
        className="badge info"
        onClick={[Function]}
        type="button"
      >
        social
      </button>
      <button
        className="badge info"
        onClick={[Function]}
        type="button"
      >
        sante
      </button>
      <button
        className="badge info"
        onClick={[Function]}
        type="button"
      >
        travail
      </button>
      <svg
        className="clockIcon"
        fill="none"
        height={16}
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <polyline
          points="12 6 12 12 16 14"
        />
      </svg>
      <span
        className="clock"
        title="2022-05-22T03:00:18.861Z"
      >
        Mise à jour il y a :
         
        environ 1 an
      </span>
    </p>
    <img
      alt="Copie d'écran de https://www.fabrique.social.gouv.fr"
      className="screenshotImg"
      src="/report/aHR0cHM6Ly93d3cuZmFicmlxdWUuc29jaWFsLmdvdXYuZnI=/screenshot.jpeg"
    />
  </div>,
  <div
    className="fr-tabs"
  >
    <ul
      className="fr-tabs__list"
      role="tablist"
    >
      <li
        role="presentation"
      >
        <button
          aria-controls="fr-tabpanel-0"
          aria-selected={true}
          className="fr-tabs__tab"
          id="fr-tab-0"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
          role="tab"
          tabIndex={0}
          type="button"
        >
          <svg
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "marginBottom": -2,
                "marginRight": 5,
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14 9V5a3 3 0 0 0-3-3l-4 9v11h11.28a2 2 0 0 0 2-1.7l1.38-9a2 2 0 0 0-2-2.3zM7 22H4a2 2 0 0 1-2-2v-7a2 2 0 0 1 2-2h3"
            />
          </svg>
          Bonnes pratiques
        </button>
      </li>
      <li
        role="presentation"
      >
        <button
          aria-controls="fr-tabpanel-1"
          aria-selected={false}
          className="fr-tabs__tab"
          id="fr-tab-1"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
          role="tab"
          tabIndex={0}
          type="button"
        >
          <svg
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "marginBottom": -2,
                "marginRight": 5,
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <polygon
              points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"
            />
          </svg>
          Disponibilité
        </button>
      </li>
      <li
        role="presentation"
      >
        <button
          aria-controls="fr-tabpanel-2"
          aria-selected={false}
          className="fr-tabs__tab"
          id="fr-tab-2"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
          role="tab"
          tabIndex={0}
          type="button"
        >
          <svg
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "marginBottom": -2,
                "marginRight": 5,
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="11"
              rx="2"
              ry="2"
              width="18"
              x="3"
              y="11"
            />
            <path
              d="M7 11V7a5 5 0 0 1 10 0v4"
            />
          </svg>
          Sécurité
        </button>
      </li>
      <li
        role="presentation"
      >
        <button
          aria-controls="fr-tabpanel-3"
          aria-selected={false}
          className="fr-tabs__tab"
          id="fr-tab-3"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
          role="tab"
          tabIndex={0}
          type="button"
        >
          <svg
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "marginBottom": -2,
                "marginRight": 5,
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="12"
              x2="12"
              y1="16"
              y2="12"
            />
            <line
              x1="12"
              x2="12.01"
              y1="8"
              y2="8"
            />
          </svg>
          Informations
        </button>
      </li>
    </ul>
    <div
      aria-labelledby="fr-tab-0"
      className="fr-tabs__panel fr-tabs__panel--selected"
      id="fr-tabpanel-0"
      role="tabpanel"
      style={
        Object {
          "paddingTop": 30,
        }
      }
      tabIndex={0}
    >
      <div>
        <div
          id="lighthouse"
        />
        <div
          className="container"
        >
          <div
            className="banner"
          >
            <h5
              className="mainTitle"
            >
              LightHouse
            </h5>
            <svg
              fill="none"
              height={20}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "cursor": "pointer",
                  "marginLeft": 5,
                }
              }
              viewBox="0 0 24 24"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <line
                x1="12"
                x2="12"
                y1="16"
                y2="12"
              />
              <line
                x1="12"
                x2="12.01"
                y1="8"
                y2="8"
              />
            </svg>
          </div>
          <div
            className="body"
          >
            <div
              className="fr-grid-row"
            >
              <div
                className="fr-col"
              >
                <div
                  className="accesibility"
                >
                  Moins de 25% des critères d'accessibilité peuvent être testés automatiquement, 
                  <strong>
                    une expertise manuelle est requise
                  </strong>
                  .
                  <br />
                  <br />
                  Ce score ne représente pas le score RGAA mais une partie des bonnes pratiques de base à appliquer.
                </div>
              </div>
            </div>
            <div
              className="container"
            >
              <div
                className="banner"
              >
                <h5
                  className="mainTitle"
                >
                  https://www.fabrique.social.gouv.fr/
                </h5>
                <svg
                  fill="none"
                  height={20}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  stroke="currentColor"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                  style={
                    Object {
                      "cursor": "pointer",
                      "marginLeft": 5,
                    }
                  }
                  viewBox="0 0 24 24"
                  width={20}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <line
                    x1="12"
                    x2="12"
                    y1="16"
                    y2="12"
                  />
                  <line
                    x1="12"
                    x2="12.01"
                    y1="8"
                    y2="8"
                  />
                </svg>
                <a
                  href="/report/aHR0cHM6Ly93d3cuZmFicmlxdWUuc29jaWFsLmdvdXYuZnI=/lhr-aHR0cHM6Ly93d3cuZmFicmlxdWUuc29jaWFsLmdvdXYuZnIv.html"
                  rel="noreferrer noopener"
                  style={
                    Object {
                      "float": "right",
                    }
                  }
                  target="_blank"
                >
                  Rapport LightHouse
                </a>
              </div>
              <div
                className="body"
              >
                <div
                  className="fr-grid-row"
                >
                  <div
                    className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
                  >
                    <div
                      className="card"
                    >
                      <div>
                        gauge mock
                      </div>
                      <div
                        className="cardTitle"
                      >
                        Accessibility
                      </div>
                      <div
                        className="cardValue"
                      >
                        96%
                      </div>
                    </div>
                  </div>
                  <div
                    className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
                  >
                    <div
                      className="card"
                    >
                      <div>
                        gauge mock
                      </div>
                      <div
                        className="cardTitle"
                      >
                        Performance
                      </div>
                      <div
                        className="cardValue"
                      >
                        30%
                      </div>
                    </div>
                  </div>
                  <div
                    className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
                  >
                    <div
                      className="card"
                    >
                      <div>
                        gauge mock
                      </div>
                      <div
                        className="cardTitle"
                      >
                        SEO
                      </div>
                      <div
                        className="cardValue"
                      >
                        90%
                      </div>
                    </div>
                  </div>
                  <div
                    className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
                  >
                    <div
                      className="card"
                    >
                      <div>
                        gauge mock
                      </div>
                      <div
                        className="cardTitle"
                      >
                        Best Practices
                      </div>
                      <div
                        className="cardValue"
                      >
                        93%
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="fr-grid-row"
                >
                  <div
                    className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
                  >
                    <div
                      className="card"
                    >
                      <div
                        className="cardTitle"
                      >
                        First contentful Paint
                      </div>
                      <div
                        className="cardValue"
                      >
                        1.2s
                      </div>
                    </div>
                  </div>
                  <div
                    className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
                  >
                    <div
                      className="card"
                    >
                      <div
                        className="cardTitle"
                      >
                        Time to interactive
                      </div>
                      <div
                        className="cardValue"
                      >
                        4.5s
                      </div>
                    </div>
                  </div>
                  <div
                    className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
                  >
                    <div
                      className="card"
                    >
                      <div
                        className="cardTitle"
                      >
                        Total requests
                      </div>
                      <div
                        className="cardValue"
                      >
                        54
                      </div>
                    </div>
                  </div>
                  <div
                    className="fr-col-12 fr-col-sm-12 fr-col-md-6 fr-col-lg-3 fr-mb-2w"
                  >
                    <div
                      className="card"
                    >
                      <div
                        className="cardTitle"
                      >
                        Total weight
                      </div>
                      <div
                        className="cardValue"
                      >
                        7.10Mb
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          id="thirdparties"
        />
        <div
          className="container"
        >
          <div
            className="banner"
          >
            <h5
              className="mainTitle"
            >
              Scripts tiers et cookies
            </h5>
            <svg
              fill="none"
              height={20}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "cursor": "pointer",
                  "marginLeft": 5,
                }
              }
              viewBox="0 0 24 24"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <line
                x1="12"
                x2="12"
                y1="16"
                y2="12"
              />
              <line
                x1="12"
                x2="12.01"
                y1="8"
                y2="8"
              />
            </svg>
          </div>
          <div
            className="body"
          >
            <div
              className="fr-table"
            >
              <table>
                <caption />
                <thead>
                  <tr>
                    <th
                      className=""
                      onClick={[Function]}
                      scope="col"
                    >
                      <div
                        className="table-column-header"
                      >
                        Cookies
                      </div>
                    </th>
                    <th
                      className=""
                      onClick={[Function]}
                      scope="col"
                    >
                      <div
                        className="table-column-header"
                      >
                        Domaine
                      </div>
                    </th>
                    <th
                      className=""
                      onClick={[Function]}
                      scope="col"
                    >
                      <div
                        className="table-column-header"
                      >
                        HTTP Only
                      </div>
                    </th>
                    <th
                      className=""
                      onClick={[Function]}
                      scope="col"
                    >
                      <div
                        className="table-column-header"
                      >
                        Secure
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td>
                      _pk_ses.2.6321
                    </td>
                    <td>
                      www.fabrique.social.gouv.fr
                    </td>
                    <td>
                      ❌
                    </td>
                    <td>
                      ❌
                    </td>
                  </tr>
                  <tr>
                    <td>
                      _pk_id.2.6321
                    </td>
                    <td>
                      www.fabrique.social.gouv.fr
                    </td>
                    <td>
                      ❌
                    </td>
                    <td>
                      ❌
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
            <div
              className="fr-table"
            >
              <table>
                <caption />
                <thead>
                  <tr>
                    <th
                      className=""
                      onClick={[Function]}
                      scope="col"
                    >
                      <div
                        className="table-column-header"
                      >
                        Flag
                      </div>
                    </th>
                    <th
                      className=""
                      onClick={[Function]}
                      scope="col"
                    >
                      <div
                        className="table-column-header"
                      >
                        Hostname
                      </div>
                    </th>
                    <th
                      className=""
                      onClick={[Function]}
                      scope="col"
                    >
                      <div
                        className="table-column-header"
                      >
                        IP
                      </div>
                    </th>
                    <th
                      className=""
                      onClick={[Function]}
                      scope="col"
                    >
                      <div
                        className="table-column-header"
                      >
                        City
                      </div>
                    </th>
                    <th
                      className=""
                      onClick={[Function]}
                      scope="col"
                    >
                      <div
                        className="table-column-header"
                      >
                        Country
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td />
                    <td>
                      www.fabrique.social.gouv.fr
                    </td>
                    <td>
                      20.74.14.77
                    </td>
                    <td>
                      Paris
                    </td>
                    <td>
                      France
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          id="stats"
        />
        <div
          className="container"
        >
          <div
            className="banner"
          >
            <h5
              className="mainTitle"
            >
              Page de statistiques
            </h5>
            <svg
              fill="none"
              height={20}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "cursor": "pointer",
                  "marginLeft": 5,
                }
              }
              viewBox="0 0 24 24"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <line
                x1="12"
                x2="12"
                y1="16"
                y2="12"
              />
              <line
                x1="12"
                x2="12.01"
                y1="8"
                y2="8"
              />
            </svg>
          </div>
          <div
            className="body"
          >
            <div
              className="fr-alert fr-alert--error"
            >
              <p
                className="fr-alert__title"
              >
                
              </p>
              <p>
                La page n'a pas été détectée! Ajoutez-la sur https://www.fabrique.social.gouv.fr/stats
              </p>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          id="declaration-a11y"
        />
        <div
          className="container"
        >
          <div
            className="banner"
          >
            <h5
              className="mainTitle"
            >
              Déclaration de mise en accessibilité
            </h5>
            <svg
              fill="none"
              height={20}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "cursor": "pointer",
                  "marginLeft": 5,
                }
              }
              viewBox="0 0 24 24"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <line
                x1="12"
                x2="12"
                y1="16"
                y2="12"
              />
              <line
                x1="12"
                x2="12.01"
                y1="8"
                y2="8"
              />
            </svg>
          </div>
          <div
            className="body"
          >
            <div
              className="fr-alert fr-alert--info"
            >
              <p
                className="fr-alert__title"
              >
                non-conforme
              </p>
              <p>
                La mention a bien été detectée : Non conforme
              </p>
            </div>
            <div
              className="fr-alert fr-alert--success"
            >
              <p
                className="fr-alert__title"
              >
                
              </p>
              <p>
                La déclaration est disponible sur :
                 
                <a
                  href="https://www.fabrique.social.gouv.fr/declaration-accessibilite"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  https://www.fabrique.social.gouv.fr/declaration-accessibilite
                </a>
              </p>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          id="declaration-rgpd"
        />
        <div
          className="container"
        >
          <div
            className="banner"
          >
            <h5
              className="mainTitle"
            >
              Mentions légales
            </h5>
            <svg
              fill="none"
              height={20}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "cursor": "pointer",
                  "marginLeft": 5,
                }
              }
              viewBox="0 0 24 24"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <line
                x1="12"
                x2="12"
                y1="16"
                y2="12"
              />
              <line
                x1="12"
                x2="12.01"
                y1="8"
                y2="8"
              />
            </svg>
          </div>
          <div
            className="body"
          >
            <div
              className="fr-alert fr-alert--success"
            >
              <p
                className="fr-alert__title"
              >
                declaration-ok
              </p>
              <p>
                Votre déclaration a bien été détectée sur :
                 
                <a
                  href="https://www.fabrique.social.gouv.fr/mentions-legales/"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  https://www.fabrique.social.gouv.fr/mentions-legales/
                </a>
              </p>
            </div>
          </div>
        </div>
        <div
          className="container"
        >
          <div
            className="banner"
          >
            <h5
              className="mainTitle"
            >
              Politique de confidentialité
            </h5>
            <svg
              fill="none"
              height={20}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "cursor": "pointer",
                  "marginLeft": 5,
                }
              }
              viewBox="0 0 24 24"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <line
                x1="12"
                x2="12"
                y1="16"
                y2="12"
              />
              <line
                x1="12"
                x2="12.01"
                y1="8"
                y2="8"
              />
            </svg>
          </div>
          <div
            className="body"
          >
            <div
              className="fr-alert fr-alert--error"
            >
              <p
                className="fr-alert__title"
              >
                no-declaration
              </p>
              <p>
                Pas de déclaration détectée. 
              </p>
            </div>
            <div
              className="fr-alert fr-alert--error"
            >
              <p
                className="fr-alert__title"
              >
                incomplete-declaration
              </p>
              <p>
                Rendez vous sur
                 
                <a
                  href="https://mattermost.incubateur.net/betagouv/channels/domaine-juridique"
                >
                  https://mattermost.incubateur.net/betagouv/channels/domaine-juridique
                </a>
                 
              </p>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          id="404"
        />
        <div
          className="container"
        >
          <div
            className="banner"
          >
            <h5
              className="mainTitle"
            >
              Erreurs 404
            </h5>
            <svg
              fill="none"
              height={20}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "cursor": "pointer",
                  "marginLeft": 5,
                }
              }
              viewBox="0 0 24 24"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <line
                x1="12"
                x2="12"
                y1="16"
                y2="12"
              />
              <line
                x1="12"
                x2="12.01"
                y1="8"
                y2="8"
              />
            </svg>
          </div>
          <div
            className="body"
          >
            <div
              className="fr-table"
            >
              <table>
                <caption />
                <thead>
                  <tr>
                    <th
                      className=""
                      onClick={[Function]}
                      scope="col"
                    >
                      <div
                        className="table-column-header"
                      >
                        URL
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td>
                      https://www.fabrique.social.gouv.fr/startups/code-du-travail-numerique/kickoff/genese
                    </td>
                  </tr>
                  <tr>
                    <td>
                      https://www.fabrique.social.gouv.fr/faq/beta.gouv.fr
                    </td>
                  </tr>
                  <tr>
                    <td>
                      https://www.fabrique.social.gouv.fr/startups/enfants-du-spectacle/
                    </td>
                  </tr>
                  <tr>
                    <td>
                      https://www.fabrique.social.gouv.fr/startups/Domifa/
                    </td>
                  </tr>
                  <tr>
                    <td>
                      https://www.fabrique.social.gouv.fr/startups/transition-collective/
                    </td>
                  </tr>
                  <tr>
                    <td>
                      https://www.fabrique.social.gouv.fr/feed.xml
                    </td>
                  </tr>
                  <tr>
                    <td>
                      https://www.fabrique.social.gouv.fr/startups/code-du-travail-numerique/sdr
                    </td>
                  </tr>
                  <tr>
                    <td>
                      https://www.fabrique.social.gouv.fr/startups/ramses/
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-labelledby="fr-tab-1"
      className="fr-tabs__panel "
      id="fr-tabpanel-1"
      role="tabpanel"
      style={
        Object {
          "paddingTop": 30,
        }
      }
      tabIndex={0}
    >
      <div
        className="fr-alert fr-alert--error"
      >
        <p
          className="fr-alert__title"
        >
          warn-no-info
        </p>
        <p>
          Aucune information trouvée dans cette catégorie
        </p>
      </div>
    </div>
    <div
      aria-labelledby="fr-tab-2"
      className="fr-tabs__panel "
      id="fr-tabpanel-2"
      role="tabpanel"
      style={
        Object {
          "paddingTop": 30,
        }
      }
      tabIndex={0}
    >
      <div
        className="fr-alert fr-alert--error"
      >
        <p
          className="fr-alert__title"
        >
          warn-no-info
        </p>
        <p>
          Aucune information trouvée dans cette catégorie
        </p>
      </div>
    </div>
    <div
      aria-labelledby="fr-tab-3"
      className="fr-tabs__panel "
      id="fr-tabpanel-3"
      role="tabpanel"
      style={
        Object {
          "paddingTop": 30,
        }
      }
      tabIndex={0}
    >
      <div
        className="fr-alert fr-alert--error"
      >
        <p
          className="fr-alert__title"
        >
          warn-no-info
        </p>
        <p>
          Aucune information trouvée dans cette catégorie
        </p>
      </div>
    </div>
  </div>,
]
`;

exports[`Tools config Should render Url with limited tools 1`] = `
Array [
  <div
    className="fr-callout fr-mb-3w"
  >
    <h4
      className="fr-callout__title fr-text--lg"
    >
      <a
        href="https://www.fabrique.social.gouv.fr"
        rel="noreferrer noopener"
        target="_blank"
      >
        https://www.fabrique.social.gouv.fr
      </a>
    </h4>
    <p
      className="fr-callout__text fr-text--lg"
    >
      <button
        className="badge success"
        onClick={[Function]}
        type="button"
      >
        fabrique
      </button>
      <button
        className="badge info"
        onClick={[Function]}
        type="button"
      >
        social
      </button>
      <button
        className="badge info"
        onClick={[Function]}
        type="button"
      >
        sante
      </button>
      <button
        className="badge info"
        onClick={[Function]}
        type="button"
      >
        travail
      </button>
      <svg
        className="clockIcon"
        fill="none"
        height={16}
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <polyline
          points="12 6 12 12 16 14"
        />
      </svg>
      <span
        className="clock"
        title="2022-05-22T03:00:18.861Z"
      >
        Mise à jour il y a :
         
        environ 1 an
      </span>
    </p>
    <img
      alt="Copie d'écran de https://www.fabrique.social.gouv.fr"
      className="screenshotImg"
      src="/report/aHR0cHM6Ly93d3cuZmFicmlxdWUuc29jaWFsLmdvdXYuZnI=/screenshot.jpeg"
    />
  </div>,
  <div
    className="fr-tabs"
  >
    <ul
      className="fr-tabs__list"
      role="tablist"
    >
      <li
        role="presentation"
      >
        <button
          aria-controls="fr-tabpanel-0"
          aria-selected={true}
          className="fr-tabs__tab"
          id="fr-tab-0"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
          role="tab"
          tabIndex={0}
          type="button"
        >
          <svg
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "marginBottom": -2,
                "marginRight": 5,
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14 9V5a3 3 0 0 0-3-3l-4 9v11h11.28a2 2 0 0 0 2-1.7l1.38-9a2 2 0 0 0-2-2.3zM7 22H4a2 2 0 0 1-2-2v-7a2 2 0 0 1 2-2h3"
            />
          </svg>
          Bonnes pratiques
        </button>
      </li>
      <li
        role="presentation"
      >
        <button
          aria-controls="fr-tabpanel-1"
          aria-selected={false}
          className="fr-tabs__tab"
          id="fr-tab-1"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
          role="tab"
          tabIndex={0}
          type="button"
        >
          <svg
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "marginBottom": -2,
                "marginRight": 5,
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <polygon
              points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"
            />
          </svg>
          Disponibilité
        </button>
      </li>
      <li
        role="presentation"
      >
        <button
          aria-controls="fr-tabpanel-2"
          aria-selected={false}
          className="fr-tabs__tab"
          id="fr-tab-2"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
          role="tab"
          tabIndex={0}
          type="button"
        >
          <svg
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "marginBottom": -2,
                "marginRight": 5,
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="11"
              rx="2"
              ry="2"
              width="18"
              x="3"
              y="11"
            />
            <path
              d="M7 11V7a5 5 0 0 1 10 0v4"
            />
          </svg>
          Sécurité
        </button>
      </li>
      <li
        role="presentation"
      >
        <button
          aria-controls="fr-tabpanel-3"
          aria-selected={false}
          className="fr-tabs__tab"
          id="fr-tab-3"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
          role="tab"
          tabIndex={0}
          type="button"
        >
          <svg
            fill="none"
            height={16}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "marginBottom": -2,
                "marginRight": 5,
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="12"
              x2="12"
              y1="16"
              y2="12"
            />
            <line
              x1="12"
              x2="12.01"
              y1="8"
              y2="8"
            />
          </svg>
          Informations
        </button>
      </li>
    </ul>
    <div
      aria-labelledby="fr-tab-0"
      className="fr-tabs__panel fr-tabs__panel--selected"
      id="fr-tabpanel-0"
      role="tabpanel"
      style={
        Object {
          "paddingTop": 30,
        }
      }
      tabIndex={0}
    >
      <div
        className="fr-alert fr-alert--error"
      >
        <p
          className="fr-alert__title"
        >
          warn-no-info
        </p>
        <p>
          Aucune information trouvée dans cette catégorie
        </p>
      </div>
    </div>
    <div
      aria-labelledby="fr-tab-1"
      className="fr-tabs__panel "
      id="fr-tabpanel-1"
      role="tabpanel"
      style={
        Object {
          "paddingTop": 30,
        }
      }
      tabIndex={0}
    >
      <div
        className="fr-alert fr-alert--error"
      >
        <p
          className="fr-alert__title"
        >
          warn-no-info
        </p>
        <p>
          Aucune information trouvée dans cette catégorie
        </p>
      </div>
    </div>
    <div
      aria-labelledby="fr-tab-2"
      className="fr-tabs__panel "
      id="fr-tabpanel-2"
      role="tabpanel"
      style={
        Object {
          "paddingTop": 30,
        }
      }
      tabIndex={0}
    >
      <div
        className="fr-alert fr-alert--error"
      >
        <p
          className="fr-alert__title"
        >
          warn-no-info
        </p>
        <p>
          Aucune information trouvée dans cette catégorie
        </p>
      </div>
    </div>
    <div
      aria-labelledby="fr-tab-3"
      className="fr-tabs__panel "
      id="fr-tabpanel-3"
      role="tabpanel"
      style={
        Object {
          "paddingTop": 30,
        }
      }
      tabIndex={0}
    >
      <div
        className="fr-alert fr-alert--error"
      >
        <p
          className="fr-alert__title"
        >
          warn-no-info
        </p>
        <p>
          Aucune information trouvée dans cette catégorie
        </p>
      </div>
    </div>
  </div>,
]
`;
